// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders correctly - with no text 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center"
  >
    loading...
  </div>
</div>
`;

exports[`Loader renders correctly - with text 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center"
  >
    Custom loader message
  </div>
</div>
`;
